# notify-send

./: notify-send.cabal  readme.md
src/System/: NotifySend.hs
test/: OptionsSpec.hs
